# psi_detector

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  psi_detector性能优化报告.md  协议过滤性能优化实施报告.md  魔法包特征检测实施报告.md
.claude/: settings.local.json
docs/: H2_H3_SUPPORT_GUIDE.md  PSI-Detector: 协议探测与升级框架.md  设计澄清.md
examples/: basic_detection.rs  client_server_demo.rs  concurrent_detection.rs  custom_configuration.rs  h2_h3_advanced.rs  magic_bytes_performance.rs  performance_test.rs  plugin_system_demo.rs  protocol_filtering_performance.rs  protocol_upgrade.rs  simd_performance.rs  simple_client_server.rs  streaming_detection.rs  websocket_upgrade_demo.rs
src/: builder.rs  error.rs  lib.rs
src/core/: detector.rs  fingerprint.rs  magic.rs  mod.rs  probe.rs  protocol.rs  tls_alpn.rs
src/probe/: active.rs  heuristic.rs  mod.rs  passive.rs
src/simd/: aarch64.rs  detector.rs  mod.rs  wasm32.rs  x86_64.rs
src/stream/: analyzer.rs  buffer.rs  mod.rs  processor.rs
src/upgrade/: http.rs  mod.rs  websocket.rs
src/utils/: logger.rs  mod.rs
tests/: core_detector_tests.rs  core_protocol_tests.rs  error_tests.rs  lib_tests.rs  simd_tests.rs
