[package]
name = "psi_detector"
version = "0.1.0"
edition = "2021"
authors = ["0ldm0s <oldmos@gmail.com>"]
description = "Protocol detection and upgrade framework inspired by Yuri's PSI Detector"
keywords = ["protocol", "detection", "upgrade", "simd", "networking"]
categories = ["network-programming", "parsing"]

[features]
default = ["basic", "simd-accel"]

# 基础协议支持
basic = ["http", "tcp"]
http = []
tcp = []
grpc = ["http2"]
http2 = []
websocket = []
quic = []
mqtt = []

# 加速功能
simd-accel = []
zero-copy = []

# 运行时支持
runtime-tokio = ["tokio"]
runtime-async-std = ["async-std"]

# 高级功能
heuristic-detection = []
active-probing = []

# 主题支持
redalert-theme = []

[dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"], optional = true }
async-std = { version = "1.12", optional = true }
futures = "0.3"

# 网络和协议
bytes = "1.5"
http = "1.0"
h2 = "0.4"
quinn = { version = "0.10", optional = true }
tokio-tungstenite = { version = "0.21", optional = true }

# SIMD支持
wide = "0.7"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志系统
zerg_creep = { path = "../zerg_creep" }
chrono = { version = "0.4", features = ["serde"] }

# 工具
once_cell = "1.19"
pin-project-lite = "0.2"
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
rayon = "1.8"

